// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserColorCircle should match snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 40px;
  height: 40px;
  border-radius: 20px;
  background-color: #eeeeee;
  font-weight: bold;
  font-family: sans-serif;
  font-size: 14px;
  color: white;
  cursor: pointer;
}

<UserColorCircle
  id="1"
  name="Test"
>
  <UserColorCircle__ColorCircle
    color="#eeeeee"
    small={false}
    title="Test"
  >
    <StyledComponent
      color="#eeeeee"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "UserColorCircle__ColorCircle-sc-1fnyyl8-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "display:flex;flex-flow:row nowrap;justify-content:center;align-items:center;width:",
              [Function],
              ";height:",
              [Function],
              ";border-radius:",
              [Function],
              ";background-color:",
              [Function],
              ";font-weight:bold;font-family:sans-serif;font-size:",
              [Function],
              ";color:white;cursor:pointer;",
            ],
          },
          "displayName": "UserColorCircle__ColorCircle",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "UserColorCircle__ColorCircle-sc-1fnyyl8-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      small={false}
      title="Test"
    >
      <div
        className="c0"
        color="#eeeeee"
        title="Test"
      >
        T
      </div>
    </StyledComponent>
  </UserColorCircle__ColorCircle>
</UserColorCircle>
`;

exports[`UserColorCircle small. should match snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 20px;
  height: 20px;
  border-radius: 10px;
  background-color: #eeeeee;
  font-weight: bold;
  font-family: sans-serif;
  font-size: 10px;
  color: white;
  cursor: pointer;
}

<UserColorCircle
  id="1"
  name="Test"
  small={true}
>
  <UserColorCircle__ColorCircle
    color="#eeeeee"
    small={true}
    title="Test"
  >
    <StyledComponent
      color="#eeeeee"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "UserColorCircle__ColorCircle-sc-1fnyyl8-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "display:flex;flex-flow:row nowrap;justify-content:center;align-items:center;width:",
              [Function],
              ";height:",
              [Function],
              ";border-radius:",
              [Function],
              ";background-color:",
              [Function],
              ";font-weight:bold;font-family:sans-serif;font-size:",
              [Function],
              ";color:white;cursor:pointer;",
            ],
          },
          "displayName": "UserColorCircle__ColorCircle",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "UserColorCircle__ColorCircle-sc-1fnyyl8-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      small={true}
      title="Test"
    >
      <div
        className="c0"
        color="#eeeeee"
        title="Test"
      >
        T
      </div>
    </StyledComponent>
  </UserColorCircle__ColorCircle>
</UserColorCircle>
`;
